--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
