--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@azure/msal-browser": "^2.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,6 +21,7 @@
     "formik": "^2.2.6",
     "material-ui": "^0.20.2",
     "material-ui-image": "^3.3.1",
+    "msal": "^1.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -25,6 +29,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -55,6 +60,7 @@
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
-    "@types/react": "^16.14.2"
+    "@types/react": "^16.14.2",
+    "@types/redux-logger": "^3.0.8"
   }
 }
