--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
     "@types/react": "^16.14.2",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8"
   }
 }
