--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.20",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,11 +19,14 @@
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "material-ui": "^0.20.2",
     "material-ui-image": "^3.3.1",
     "msal": "^1.4.5",
+    "or": "^0.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
